examples/misc/error/compilation/etc_large-bfcode.bfr
(* 出力コードサイズが大きくなりすぎるサンプル
   sandboxフラグ付与時にbinで対処する
*)

let main = [
  $build { x }
  + x 4611686018427387903
  + x 4611686018427387903
  + x 2
]